--- a/app/globals.css
+++ b/app/globals.css
@@ -129,3 +129,15 @@ body {
   color: rgb(17, 16, 16);
   background: rgb(133, 120, 120);
 }
+my-container::-webkit-scrollbar {
+  width: 1em;
+}
+ 
+my-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+my-container::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
